2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 562393 – g_buffered_input_stream_read_byte broken if data
	available

	* gio/gbufferedinputstream.c (g_buffered_input_stream_read_byte): Fix
	handling of buffered content.  Patch by Philip Withnall

	* gio/tests/buffered-input-stream.c: Add a testcase for this bug.
	* gio/tests/Makefile.am: And build it

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 561807 – inotify_sub.c :: dup_dirname() fails to 
	remove trailing '/'

	* inotify/inotify-sub.c (dup_dirname): Actually strip
	the trailing '/' away. Spotted by Dan Williams.


2008-11-24  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.18.3 ===

2008-11-23  Hans Breuer  <hans@breuer.org>

	* gio.rc.in : version resource as for the other glib dlls
	* win32/makefile.msc win32/Makefile.am : added, EXTRA_DIST
	* makefile.msc : updated (generate files before building in sub dir)

2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 561375 – Leaks mountpoint description

	* glocalfile.c: (get_mount_info): don't leak the mountpoint description
	string.

2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 561352 – Leak of icon description

	* gcontenttype.c: (g_content_type_get_icon): don't leak the XDG mimetype
	generic icon string.

2008-11-14  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk.

	Bug 556910 – [fam-helper.c:223]: Memory leak: sub

	* fam/fam-helper.c: Fix a memory leak. 
	Reported by Daniel Marjamäki

2008-11-12  Tor Lillqvist  <tml@novell.com>

	Bug 556415 - Crash on Windows 2000 in g_winhttp_vfs_init()

	* win32/gwinhttpvfs.h: Move the set of function pointers to
	winhttp.dll into a separate struct GWinHttpDllFuncs. Just have a
	pointer to that in the GWinHttpVfsClass.
	
	* win32/gwinhttpvfs.c: Move the lookup of functions from
	winhttp.dll into a function of its own, that stores the pointers
	in a separate GWinHttpDllFuncs variable. Add two bookeeping