@@ -2,6 +2,15 @@
 
 	Merged from trunk:
 
+	Bug 541715 – win32 : patch for warnings and signature problems in
+	recent code
+
+	* glocalvfs.c: Avoid unused variables. Pointed out by Jody Goldberg.
+
+2008-11-28  Matthias Clasen  <mclasen@redhat.com>
+
+	Merged from trunk:
+
 	Bug 562393 – g_buffered_input_stream_read_byte broken if data
 	available
 
